# azure-ai-search-from-wiki

./: .env_sample  .gitignore  README.md  pyproject.toml
IT-knowledge/DevOps/: credentials.txt  knowledge-ci-cd.md  meeting-notes-2025-09-02.md  sample_ci_healthcheck.py
IT-knowledge/Networking/: credentials.txt  knowledge-vpn-troubleshooting.md  meeting-notes-2025-08-15.md  sample_check_gateway.py
IT-knowledge/Security/: credentials.txt  knowledge-incident-response.md  meeting-notes-2025-09-02.md  sample_security_healthcheck.py
sample/: sample_REST_call.txt  sample_movies.json  sample_request_body.json  sample_testset.jsonl
scripts/: 00_upload_to_wiki.py  01_download_from_wiki.py  02_create_json.py  03_create_index_with_filter.py  03_create_index_with_filter_sdk(WIP).py  04_test_query_with_filter.py  05_create_testset.py  it_knowledge.json  o3_reasoning_content.py  testset.jsonl
